[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Enviroment/Plants/Plants.gd" type="Script" id=1]
[ext_resource path="res://Assets/Entity/plants/Plant_1.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.168 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("1/2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.184 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("1/2/3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.184 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("1/2/3/4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -3.168 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("1/2/3/4/5:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -4.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("1/2/3/4/5/6:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -3.168 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("1/2/3/4/5/6/7:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.184 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Sway"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("1:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("1/2:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("1/2/3:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("1/2/3/4:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("1/2/3/4/5:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("1/2/3/4/5/6:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.5, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("1/2/3/4/5/6/7:rotation_degrees")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, -5.0 ]
}

[node name="Plant_1" type="Node2D"]
modulate = Color( 0.72549, 0.729412, 0.764706, 1 )
z_index = 10
script = ExtResource( 1 )

[node name="1" type="Sprite" parent="."]
rotation = 0.055292
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 2 )
offset = Vector2( 0, -1150 )

[node name="2" type="Sprite" parent="1"]
position = Vector2( 0, -2350 )
rotation = 0.0206647
texture = ExtResource( 2 )
offset = Vector2( 0, -1150 )

[node name="3" type="Sprite" parent="1/2"]
position = Vector2( 0, -2350 )
rotation = -0.0206647
texture = ExtResource( 2 )
offset = Vector2( 0, -1150 )

[node name="4" type="Sprite" parent="1/2/3"]
position = Vector2( 0, -2350 )
rotation = -0.055292
texture = ExtResource( 2 )
offset = Vector2( 0, -1150 )

[node name="5" type="Sprite" parent="1/2/3/4"]
position = Vector2( 0, -2350 )
rotation = -0.0698132
texture = ExtResource( 2 )
offset = Vector2( 0, -1150 )

[node name="6" type="Sprite" parent="1/2/3/4/5"]
position = Vector2( 0, -2350 )
rotation = -0.055292
texture = ExtResource( 2 )
offset = Vector2( 0, -1150 )

[node name="7" type="Sprite" parent="1/2/3/4/5/6"]
position = Vector2( 0, -2350 )
rotation = -0.0206647
texture = ExtResource( 2 )
offset = Vector2( 0, -1150 )

[node name="Plant_Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Sway = SubResource( 2 )

[node name="Vis" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -165 )
scale = Vector2( 4.7, 18.1 )

[connection signal="screen_entered" from="Vis" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Vis" to="." method="_on_VisibilityNotifier2D_screen_exited"]
